# ToDoApp

./: #glade2.glade#  BuilderRef.cpp  BuilderRef.h  CMakeLists.txt  Checkbox_try  README.md  ToDoTask.cpp  ToDoTask.h  ToDoWindow.cpp  ToDoWindow.h  TreeModel.cpp  TreeModel.h  conanfile.txt  main.cpp
GtkElements/: GTK_button_add_task.cpp  GTK_button_add_task.h  GTK_button_delete_task.cpp  GTK_button_delete_task.h  GTK_button_edit_task.cpp  GTK_button_edit_task.h  GTK_calendar.cpp  GTK_calendar.h  GTK_entry_add_task.cpp  GTK_entry_add_task.h  GTK_tree_list_of_task.cpp  GTK_tree_list_of_task.h
